syntax = "proto3";

option csharp_namespace = "GrpcProvider";

package ProviderApi;

service Provider {
	rpc GetProviderById (ProviderRequest) returns (ProviderResponse) {}
	rpc GetProviders (ProvidersRequest) returns (ProvidersPagination){}
	rpc UpdateProvider(UpdateProviderRequest) returns(ProviderResponse){}
	rpc UpdatePicture(ProviderPictureRequest) returns(ProviderPictureResponse){}

}

message ProviderRequest {
	string id = 1;
}

message UpdateProviderRequest {
	string id = 1;
	string title = 2;
	string description = 3;
	string location = 4;
	bytes image = 5;
	string tag = 6;
	string token =7;
}

message ProviderResponse {
	string id = 1;
	string title = 2;
	string description = 3;
	string location = 4;
	bytes image = 5;
	string tag = 6;
}

message ProvidersRequest {
	string id = 1;
	int32 pageSize = 3;
	int32 pageIndex = 4;
}

message ProvidersPagination {
	int32 totalProviders = 1;
	int32 totalPages = 2;
	repeated ProviderResponse data = 3;
}

message ProviderPictureRequest {
	string id = 1;
	string fileName = 2;
	bytes image = 3;
}

message ProviderPictureResponse {
	bool status = 1;
}